# Django4-Vue3-Vuetify3-Websocket

./: .gitignore  README.md
Docker/: docker-compose.yml  env-example
django4Backend/: manage.py  pyproject.toml
django4Backend/django4Backend/: asgi.py  settings.py  urls.py  wsgi.py
