[tool.poetry]
name = "django4backend"
version = "0.1.0"
description = ""
authors = ["Jonas Legion <jturbeaux@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
